Add update handler
